@@ -1,3 +1,7 @@
+2008-03-05  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #7757: htmlArea RTE: Alternating table rows/columns should start at 1
+
 2008-03-04  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #7754: htmlArea RTE: Caption should be first element in table
